--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-background-image:url(img/thebest1.png);
+background-image:url(image.png);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center;
