--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-background-image:url(image.png);
+background: linear-gradient(45deg, #EECFBA, #C5DDE8);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
@@ -8,7 +8,7 @@ font-size:15px;
 color:red;
 }
 body{
-background-image:url(background 1.jpg);
+background: linear-gradient(45deg, #EECFBA, #C5DDE8);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
