--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-background: linear-gradient(45deg, #EECFBA, #C5DDE8);
+background: linear-gradient(at top, #EECFBA, #C5DDE8);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
