--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,15 @@ background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
 }
+.st1{
+padding:6px;
+margin:1px;
+border-bottom:5px ridge;
+border-bottom-color:#0000ff;
+}
+.st2{
+padding:6px;
+margin:1px;
+border-bottom:5px ridge;
+border-bottom-color:#1427a3;
+}
