--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ padding:6px;
 margin:1px;
 border-bottom:5px ridge;
 border-bottom-color:#0000ff;
-text-align:center;
+text-align:right;
 }
 .st2{
 padding:6px;
