--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ background-position:top center;
 padding:0px;
 margin:1px;
 text-align:right;
+font-family:serif;
+font-weight:900;
+font-variant:small-caps;
+text-shadow:1px 1px 2px black,0 0 1em green;
 }
 .st2{
 padding:6px;
