--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ background-position:top center;
 .st1{
 padding:0px;
 margin:1px;
+font-size:60px;
 text-align:right;
 font-family:serif;
 font-weight:900;
