--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@ font-size:15px;
 color:red;
 }
 body{
-background: linear-gradient(45deg, #EECFBA, #C5DDE8);
+background: linear-gradient(at top, #EECFBA, #C5DDE8);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
 }
 .st1{
+background: linear-gradient(at top, #8B0000, #B0E0E6);
 padding:0px;
 margin:1px;
 font-size:60px;
