--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
 }
+main{
+background-image:url(background 1.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position:top center; 
+}
 .st1{
 background: linear-gradient(at top, #8B0000, #B0E0E6);
 padding:0px;
