--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,8 @@ background-color:blue;
 border:3px ridge red;
 padding:20px;
 }
+.tree {
+background: linear-gradient(45 deg, #0ffca5, #C5DDE8);
+background-repeat: no-repeat;
+background-size: cover;
+background-position:top center; 
