--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-background: linear-gradient(45 deg, #EECFBA, #C5DDE8);
+background-color:#cc950a;
 background-size: cover;
 font-align:center;
 font-size:15px;
@@ -44,6 +44,6 @@ border:3px ridge red;
 padding:20px;
 }
 .tree {
-background: linear-gradient(45 deg, #0ffca5, #C5DDE8);
+background-color:#0ffca5;
 background-size: cover;
 background-position:top center; 
