--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ color:red;
 }
 
 main{
-background-image:url(background 1.jpg);
+background-image:url(background1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
@@ -42,6 +42,7 @@ border-bottom-color:#1427a3;
 background-color:blue;
 border:3px ridge red;
 padding:20px;
+margin:10px;
 }
 .tree {
 background-color:#0ffca5;
