--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ border:3px ridge red;
 padding:20px;
 margin:10px;
 }
+.frame1{
+background-color:green;
+border:3px ridge red;
+padding:20px;
+margin:10px;
 .tree {
 background-color:#0ffca5;
 background-size: cover;
