--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ color:red;
 }
 
 main{
-background-image:url(background1.jpg);
+background-image:url("background 1.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 background-position:top center; 
